# faqer

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
models/notebooks/: Untitled.ipynb  keywords.ipynb  navec.ipynb  predict_category.ipynb  preprocess.ipynb  sentences.ipynb
models/notebooks/.ipynb_checkpoints/: preprocess-checkpoint.ipynb
models/pickled/: WORDS-embedder.model.1609056308.pkl  WORDS-embedder.model.1609057698.pkl  WORDS-embedder.model.1609058925.pkl  WORDS-embedder.model.1609059098.pkl  WORDS-embedder.model.1609124956.pkl  WORDS-embedder.model.1609269797.pkl  WORDS-embedder.model.1609285944.pkl  embedder.example.pkl  embedder.model.1609056308.pkl  embedder.model.1609057698.pkl  embedder.model.1609058925.pkl  embedder.model.1609059098.pkl
web/conf/: settings.py  urls.py
web/faqer/: apps.py  views.py
web/faqer/management/commands/: clusterize.py  train_embedder.py
web/faqer/services/classificator/: eval.py  models.py  train.py
web/faqer/services/cluster/: suggest.py
web/faqer/services/data/: utils.py
