[tool.poetry]
name = "faqer"
version = "0.1.0"
description = ""
authors = ["akrasniy <akrasniy@iponweb.net>"]

[tool.poetry.dependencies]
python = ">=3.6.2"
pandas = "^1.1.5"
nltk = "^3.5"
matplotlib = "^3.3.3"
torch = "^1.7.1"
Django = "^3.1.4"
tqdm = "^4"
navec = "^0.10.0"
slovnet = "^0.5.0"
django-extensions = "^3.1.0"
gensim = "^3.8.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
